# maubot-meeting-summary

./: .gitignore  .pre-commit-config.yaml  README.md  REUSE.toml  base-config.yaml  maubot.yaml  meeting_summary.py  pyproject.toml
.github/workflows/: main.yml
